yanl/examples/t1/fail/functie_inexistenta.yanl
# O procedura nu poate fi folosita fara a fi definita

program dude;
var a:integer;
    b:real;

function f(z:integer):integer
begin
  write_zuzu(20);
  f:=1;
end;

begin
  writeinteger(20);
end.